[package]
name = "flux-stigmergy"
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/Lucineer"
repository = "https://github.com/Lucineer/flux-stigmergy"
license = "MIT OR Apache-2.0"
description = "Pheromone-based indirect communication — how agents leave trails for each other"

[dependencies]
rand = "0.8"
